--- a/index.html
+++ b/index.html
@@ -104,10 +104,15 @@
                     <div id="permit" class="pt-3">
                         <div class="container-fluid set4">
                             <div class="navbar pl-5 pr-1 pt-3 mr-0 pb-1" style="margin-left: -15px;">
-                                <div>
-                                    <input class="form-control br-10 border-0 daterange" style="display:unset; width:40%; height: 100%;" id="daterange" type="date" value="2018-01-01" />
-                                    &nbsp;&nbsp;&nbsp;
-                                    <img src="Group 67.png" />
+                                <div id="set-wid" style="width: 229px; height: 54px; border-radius: 10px; color: #200E32;" class="bg-white">
+                                    <div style="margin: 6.55%; margin-top: auto; margin-bottom: auto; height: 100%;" class="navbar p-0 fs-14 fw-400">Dec 11, 2021 <img src="Arrow - Right.png" /> Jan 11, 2022</div>
+                                </div>
+                                <div class="mr-auto navbar p-0">
+                                    <div class="fs-14 mr-2" style="margin-left: 20px;">
+                                        1 - 30 of 2000
+                                    </div>
+                                    <img class="ml-2 mr-auto" src="Arrow - Right Square.png" style="width: 21px; height: 21px;" />
+                                    <img class="ml-2 mr-auto" src="Arrow - Right Square (1).png" style="width: 21px; height: 21px;" />
                                 </div>
                                 <div>
                                     <div class="navbar p-0">
