--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
 
 
-                <div class="d-flex pt-2 side-style">
+                <div class="d-flex pt-4 side-style">
                     <ul id="tabsJustified" class="nav nav-pills flex-column" style="height: 742px;">
                         
 
@@ -101,7 +101,7 @@
 
                 <div class="tab-content p-0" style="width: 78.8%;">
 
-                    <div id="permit" class="pt-3">
+                    <div id="permit" class="pt-4">
                         <div class="container-fluid set4">
                             <div class="navbar pl-5 pr-1 pt-3 mr-0 pb-1" style="margin-left: -15px;">
                                 <div id="set-wid" style="width: 229px; height: 54px; border-radius: 10px; color: #200E32;" class="bg-white">
@@ -135,7 +135,7 @@
                         <div class="container-fluid">
                             <div class="row pl-5 pr-2 pb-1 pt-3">
                                 <div style="overflow-x: scroll; width: 100%;" id="style-2">
-                                    <table class="table tbl-csv fs-11">
+                                    <table class="table tbl-csv">
                                         <thead>
                                             <tr>
                                                 <td scope="col" style="border-top-left-radius: 10px; border-bottom-left-radius: 10px;">#ID</td>
@@ -171,7 +171,7 @@
                                                     <div>
                                                         <img src="1516540693104 1.png" style="border-radius: 50%;" width="26" height="26" />
                                                     </div>
-                                                    <div class="mr-auto fs-11">
+                                                    <div class="mr-auto fs-12">
                                                         &nbsp; Christian COLLIN
                                                     </div>
                                                 </td>
@@ -182,7 +182,7 @@
                                                     <div>
                                                         <img src="Ellipse 3.png" style="border-radius: 50%;" width="36" height="36" />
                                                     </div>
-                                                    <div class="mr-auto fs-11">
+                                                    <div class="mr-auto fs-12">
                                                         &nbsp; Philippe Chaussée
                                                     </div>
                                                 </td>
@@ -212,7 +212,7 @@
                                                     <div>
                                                         <img src="1516540693104 1.png" style="border-radius: 50%;" width="26" height="26" />
                                                     </div>
-                                                    <div class="mr-auto fs-11">
+                                                    <div class="mr-auto fs-12">
                                                         &nbsp; Christian COLLIN
                                                     </div>
                                                 </td>
@@ -223,7 +223,7 @@
                                                     <div>
                                                         <img src="Ellipse 3.png" style="border-radius: 50%;" width="36" height="36" />
                                                     </div>
-                                                    <div class="mr-auto fs-11">
+                                                    <div class="mr-auto fs-12">
                                                         &nbsp; Philippe Chaussée
                                                     </div>
                                                 </td>
@@ -253,7 +253,7 @@
                                                     <div>
                                                         <img src="1516540693104 1.png" style="border-radius: 50%;" width="26" height="26" />
                                                     </div>
-                                                    <div class="mr-auto fs-11">
+                                                    <div class="mr-auto fs-12">
                                                         &nbsp; Christian COLLIN
                                                     </div>
                                                 </td>
@@ -264,7 +264,7 @@
                                                     <div>
                                                         <img src="Ellipse 3.png" style="border-radius: 50%;" width="36" height="36" />
                                                     </div>
-                                                    <div class="mr-auto fs-11">
+                                                    <div class="mr-auto fs-12">
                                                         &nbsp; Philippe Chaussée
                                                     </div>
                                                 </td>
@@ -294,7 +294,7 @@
                                                     <div>
                                                         <img src="1516540693104 1.png" style="border-radius: 50%;" width="26" height="26" />
                                                     </div>
-                                                    <div class="mr-auto fs-11">
+                                                    <div class="mr-auto fs-12">
                                                         &nbsp; Christian COLLIN
                                                     </div>
                                                 </td>
@@ -305,7 +305,7 @@
                                                     <div>
                                                         <img src="Ellipse 3.png" style="border-radius: 50%;" width="36" height="36" />
                                                     </div>
-                                                    <div class="mr-auto fs-11">
+                                                    <div class="mr-auto fs-12">
                                                         &nbsp; Philippe Chaussée
                                                     </div>
                                                 </td>
@@ -335,7 +335,7 @@
                                                     <div>
                                                         <img src="1516540693104 1.png" style="border-radius: 50%;" width="26" height="26" />
                                                     </div>
-                                                    <div class="mr-auto fs-11">
+                                                    <div class="mr-auto fs-12">
                                                         &nbsp; Christian COLLIN
                                                     </div>
                                                 </td>
@@ -346,7 +346,7 @@
                                                     <div>
                                                         <img src="Ellipse 3.png" style="border-radius: 50%;" width="36" height="36" />
                                                     </div>
-                                                    <div class="mr-auto fs-11">
+                                                    <div class="mr-auto fs-12">
                                                         &nbsp; Philippe Chaussée
                                                     </div>
                                                 </td>
@@ -376,7 +376,7 @@
                                                     <div>
                                                         <img src="1516540693104 1.png" style="border-radius: 50%;" width="26" height="26" />
                                                     </div>
-                                                    <div class="mr-auto fs-11">
+                                                    <div class="mr-auto fs-12">
                                                         &nbsp; Christian COLLIN
                                                     </div>
                                                 </td>
@@ -387,7 +387,7 @@
                                                     <div>
                                                         <img src="Ellipse 3.png" style="border-radius: 50%;" width="36" height="36" />
                                                     </div>
-                                                    <div class="mr-auto fs-11">
+                                                    <div class="mr-auto fs-12">
                                                         &nbsp; Philippe Chaussée
                                                     </div>
                                                 </td>
@@ -417,7 +417,7 @@
                                                     <div>
                                                         <img src="1516540693104 1.png" style="border-radius: 50%;" width="26" height="26" />
                                                     </div>
-                                                    <div class="mr-auto fs-11">
+                                                    <div class="mr-auto fs-12">
                                                         &nbsp; Christian COLLIN
                                                     </div>
                                                 </td>
@@ -428,7 +428,7 @@
                                                     <div>
                                                         <img src="Ellipse 3.png" style="border-radius: 50%;" width="36" height="36" />
                                                     </div>
-                                                    <div class="mr-auto fs-11">
+                                                    <div class="mr-auto fs-12">
                                                         &nbsp; Philippe Chaussée
                                                     </div>
                                                 </td>
