--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div id="permit" style="margin-top: 50px;">
                         <div class="container-fluid set4">
                             <div class="navbar pl-5 pr-1 pt-3 mr-0 pb-1" style="margin-left: -15px;">
-                                <div id="set-wid" style="width: 229px; height: 54px; border-radius: 10px; color: #200E32;" class="bg-white">
+                                <div class="date-range" id="set-wid" style="width: 229px; border-radius: 10px; color: #200E32;" class="bg-white">
                                     <div style="margin: 6.55%; margin-top: auto; margin-bottom: auto; height: 100%;" class="navbar p-0 fs-14 fw-400">Dec 11, 2021 <img src="Arrow - Right.png" /> Jan 11, 2022</div>
                                 </div>
                                 <div class="mr-auto navbar p-0">
