--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <body style="background: #F7F8FA;">
         <div class="container-fluid">
             <div class="row">
-                <nav class="navbar w-100 bg-white" style="padding-left: 3.056%; padding-right: 3.056%; padding-top: 14px; padding-bottom: 14px;">
+                <nav class="navbar w-100 bg-white pr-4" style="padding-left: 3.056%; padding-right: 3.056%; padding-top: 14px; padding-bottom: 14px;">
                     <img src="logo.png  " width="99" height="37" />
                     <div style="width: 40.5%; display: flex;">
                         <div class="input-group sbar" style="height: 42px; width: 68%; margin-right: 33.08%;">
@@ -130,7 +130,7 @@
                         </div>
 
                         <div class="container-fluid">
-                            <div class="row pl-5 pr-2 pb-1 pt-3">
+                            <div class="row pl-5 pr-4 pb-1 pt-3">
                                 <div style="overflow-x: scroll; width: 100%;" id="style-2">
                                     <table class="table tbl-csv">
                                         <thead>
@@ -155,13 +155,13 @@
                                                 <td class="fw-400">245178451</td>
                                                 <td class="fw-400" style="color: #FFFFFF;">
                                                     <div class="br-10 p-1 text-center" style="background:#EF3C3C; height: 26px; width: 67px;">
-                                                        Close 
+                                                        <p class="p-t">Close</p> 
                                                     </div>
                                                 </td>
                                                 <td class="fw-400"><img src="iu.png" height="32px" width="73px"></td>
                                                 <td class="fw-400" style="color: #FFFFFF;">
                                                     <div class="br-10 p-1 text-center" style="background:#008CFF; height: 26px; width: 67px;">
-                                                        One shot
+                                                        <p class="p-t">One shot</p>
                                                     </div>
                                                 </td>
                                                 <td scope="row" class="navbar p-0 pt-2">
@@ -185,7 +185,7 @@
                                                 </td>
                                                 <td class="fw-400" style="color: #FFFFFF;">
                                                     <div class="br-10 p-1 text-center" style="background:#615EFF; height: 26px; width: 67px;">
-                                                        Afficher
+                                                        <p class="p-t">Afficher</p>
                                                     </div>
                                                 </td>
                                                 <td class="align-middle">
@@ -196,13 +196,13 @@
                                                 <td class="fw-400">233146755</td>
                                                 <td class="fw-400" style="color: #14142B;">
                                                     <div class="br-10 p-1 text-center" style="background:#FCF319; height: 26px; width: 67px;">
-                                                        Pending 
+                                                        <p class="p-t">Pending</p> 
                                                     </div>
                                                 </td>
                                                 <td class="fw-400"><img src="iu.png" height="32px" width="73px"></td>
                                                 <td class="fw-400" style="color: #FFFFFF;">
                                                     <div class="br-10 p-1 text-center" style="background:#008CFF; height: 26px; width: 67px;">
-                                                        One shot
+                                                        <p class="p-t">One shot</div>
                                                     </div>
                                                 </td>
                                                 <td scope="row" class="navbar p-0 pt-2">
@@ -226,7 +226,7 @@
                                                 </td>
                                                 <td class="fw-400" style="color: #FFFFFF;">
                                                     <div class="br-10 p-1 text-center" style="background:#615EFF; height: 26px; width: 67px;">
-                                                        Afficher
+                                                        <p class="p-t">Afficher</p>
                                                     </div>
                                                 </td>
                                                 <td class="align-middle">
@@ -237,13 +237,13 @@
                                                 <td class="fw-400">597875465</td>
                                                 <td class="fw-400" style="color: #FFFFFF;">
                                                     <div class="br-10 p-1 text-center" style="background:#EF3C3C; height: 26px; width: 67px;">
-                                                        Close 
+                                                        <p class="p-t">Close</p> 
                                                     </div>
                                                 </td>
                                                 <td class="fw-400"><img src="iu.png" height="32px" width="73px"></td>
                                                 <td class="fw-400" style="color: #FFFFFF;">
                                                     <div class="br-10 p-1 text-center" style="background:#008CFF; height: 26px; width: 67px;">
-                                                        One shot
+                                                        <p class="p-t">One shot</p>
                                                     </div>
                                                 </td>
                                                 <td scope="row" class="navbar p-0 pt-2">
@@ -267,7 +267,7 @@
                                                 </td>
                                                 <td class="fw-400" style="color: #FFFFFF;">
                                                     <div class="br-10 p-1 text-center" style="background:#615EFF; height: 26px; width: 67px;">
-                                                        Afficher
+                                                        <p class="p-t">Afficher</p>
                                                     </div>
                                                 </td>
                                                 <td class="align-middle">
@@ -278,13 +278,13 @@
                                                 <td class="fw-400">287978463</td>
                                                 <td class="fw-400" style="color: #14142B;">
                                                     <div class="br-10 p-1 text-center" style="background:#B4F32E; height: 26px; width: 67px;">
-                                                        Ongoing
+                                                        <p class="p-t">Ongoing</p>
                                                     </div>
                                                 </td>
                                                 <td class="fw-400"><img src="iu.png" height="32px" width="73px"></td>
                                                 <td class="fw-400" style="color: #14142B;">
                                                     <div class="br-10 p-1 text-center" style="background:#FFC553; height: 26px; width: 67px;">
-                                                        Recurrent
+                                                        <p class="p-t">Recurrent</p>
                                                     </div>
                                                 </td>
                                                 <td scope="row" class="navbar p-0 pt-2">
@@ -308,7 +308,7 @@
                                                 </td>
                                                 <td class="fw-400" style="color: #FFFFFF;">
                                                     <div class="br-10 p-1 text-center" style="background:#615EFF; height: 26px; width: 67px;">
-                                                        Afficher
+                                                        <p class="p-t">Afficher</p>
                                                     </div>
                                                 </td>
                                                 <td class="align-middle">
@@ -319,13 +319,13 @@
                                                 <td class="fw-400">287978463</td>
                                                 <td class="fw-400" style="color: #14142B;">
                                                     <div class="br-10 p-1 text-center" style="background:#FCF319; height: 26px; width: 67px;">
-                                                        Pending
+                                                        <p class="p-t">Pending</p>
                                                     </div>
                                                 </td>
                                                 <td class="fw-400"><img src="iu.png" height="32px" width="73px"></td>
                                                 <td class="fw-400" style="color: #FFFFFF;">
                                                     <div class="br-10 p-1 text-center" style="background:#008CFF; height: 26px; width: 67px;">
-                                                        One shot
+                                                        <p class="p-t">One shot</p>
                                                     </div>
                                                 </td>
                                                 <td scope="row" class="navbar p-0 pt-2">
@@ -349,7 +349,7 @@
                                                 </td>
                                                 <td class="fw-400" style="color: #FFFFFF;">
                                                     <div class="br-10 p-1 text-center" style="background:#615EFF; height: 26px; width: 67px;">
-                                                        Afficher
+                                                        <p class="p-t">Afficher</p>
                                                     </div>
                                                 </td>
                                                 <td class="align-middle">
@@ -366,7 +366,7 @@
                                                 <td class="fw-400"><img src="iu.png" height="32px" width="73px"></td>
                                                 <td class="fw-400" style="color: #14142B;">
                                                     <div class="br-10 p-1 text-center" style="background:#FFC553; height: 26px; width: 67px;">
-                                                        Recurrent
+                                                        <p class="p-t">Recurrent</p>
                                                     </div>
                                                 </td>
                                                 <td scope="row" class="navbar p-0 pt-2">
@@ -390,7 +390,7 @@
                                                 </td>
                                                 <td class="fw-400" style="color: #FFFFFF;">
                                                     <div class="br-10 p-1 text-center" style="background:#615EFF; height: 26px; width: 67px;">
-                                                        Afficher
+                                                        <p class="p-t">Afficher</p>
                                                     </div>
                                                 </td>
                                                 <td class="align-middle">
@@ -401,13 +401,13 @@
                                                 <td class="fw-400">778495836</td>
                                                 <td class="fw-400" style="color: #14142B;">
                                                     <div class="br-10 p-1 text-center" style="background:#B4F32E; height: 26px; width: 67px;">
-                                                        Ongoing
+                                                        <p class="p-t">Ongoing</p>
                                                     </div>
                                                 </td>
                                                 <td class="fw-400"><img src="iu.png" height="32px" width="73px"></td>
                                                 <td class="fw-400" style="color: #FFFFFF;">
                                                     <div class="br-10 p-1 text-center" style="background:#008CFF; height: 26px; width: 67px;">
-                                                        One shot
+                                                        <p class="p-t">One shot</p>
                                                     </div>
                                                 </td>
                                                 <td scope="row" class="navbar p-0 pt-2">
@@ -431,7 +431,7 @@
                                                 </td>
                                                 <td class="fw-400" style="color: #FFFFFF;">
                                                     <div class="br-10 p-1 text-center" style="background:#615EFF; height: 26px; width: 67px;">
-                                                        Afficher
+                                                        <p class="p-t">Afficher</p>
                                                     </div>
                                                 </td>
                                                 <td class="align-middle">
@@ -530,7 +530,7 @@
                                                     </div>
                                                     </div>
                                                     &nbsp;&nbsp;&nbsp;&nbsp;
-                                                    <div>
+                                                    <div style="width: 100%;">
                                                     <div class="mb-3">
                                                         <label for="exampleFormControlInput1" class="form-label mb-3"> &nbsp;</label>
                                                         <input type="text" class="form-control fs-14 h-35 pd-inp" id="exampleFormControlInput1" value="0 101 01 01" style= "color: #200E32; box-sizing: border-box;border-radius: 8px;background-color:transparent;">
@@ -670,7 +670,7 @@
                                       </div>
                                     </div>
                                     &nbsp;&nbsp;&nbsp;&nbsp;
-                                    <div>
+                                    <div style="width: 100%;">
                                       <div class="mb-3">
                                         <label for="exampleFormControlInput1" class="form-label mb-3"> &nbsp;</label>
                                         <input type="text" class="form-control fs-14 h-35 pd-inp" id="exampleFormControlInput1" value="0 101 01 01" style= "color: #200E32; 
